# code-2024

./: .gitignore  .gitmodules  README.md
.github/: pull_request_template.md
.github/workflows/: build.yml  publish-live-telemetry.yml
Libraries/ADC_SPI/: ADC_SPI.cpp  ADC_SPI.h
Libraries/ADC_SPI_HT06/: ADC_SPI_HT06.cpp  ADC_SPI_HT06.h
Libraries/ADIS16460/: ADIS16460.cpp  ADIS16460.h
Libraries/ADIS16460_ORI/: ADIS16460_ORI.cpp  ADIS16460_ORI.h
Libraries/FlexCAN_T4/: FlexCAN_T4.h  FlexCAN_T4FD.tpp  isotp.h
Libraries/FlexCAN_T4-master/: FlexCAN_T4.tpp  isotp.tpp
Libraries/HyTech_CAN/: ACU_shunt_measurements.h  BMS_detailed_temperatures.h  BMS_detailed_voltages.h  BMS_onboard_temperatures.h  BMS_status.h  BMS_temperatures.h  CAN_ID.h  CCU_status.h  Dashboard_status.h  EM_measurement.h  EM_status.h  GPS_high_precision.h  GPS_lat_long.h  GPS_other.h  HyTech_CAN.h  IMU_accelerometer.h  IMU_gryoscope.h  MCU_GPS_readings.h  MCU_analog_readings.h  MCU_front_potentiometers.h  MCU_load_cells.h  MCU_pedal_readings.h  MCU_potentiometers.h  MCU_rear_potentiometers.h  MCU_status.h  MCU_thermistors.h  MC_energy.h  MC_setpoints_command.h  MC_status.h  MC_temps.h  MC_torque_command.h  SAB_CB.h  SAB_readings_gps.h  SAB_ride_heights.h  SAB_thermistors_1.h  SAB_thermistors_2.h  TCU_status.h  Tire_SVPP.h  Tire_infared_temps.h  Tire_sensor_info.h
Libraries/LTC6811_2/: LTC6811_2.cpp  LTC6811_2.h
Libraries/Metro/: Metro.cpp
Libraries/RideHeightRS485/: RideHeightRS485.cpp  RideHeightRS485.h
Libraries/STEERING_RS422/: STEERING_RS422.h  STEERING_RS_422.cpp
Libraries/STEERING_SPI/: STEERING_SPI.cpp  STEERING_SPI.h
Libraries/VehicleUtilities/: DialVectoring.h
Libraries/some_stupid_fucking_fancy_shit/: DashboardInterface.cpp  DashboardInterface.h  HytechCANInterface.cpp  HytechCANInterface.h  MessageQueueDefine.h  hytech-binutil.c  hytech-config.h  hytech-fmon.h
Libraries/vn/: types.cpp
Playground/AMK_motorspin/: AMK_motorspin.ino
Playground/AMK_motorspin_1M/: AMK_motorspin_1M.ino  MCU_rev15_dfs.h
Playground/AMK_motorspin_type/: AMK_motorspin_type.ino
Playground/Dashboard_Combatibility_Testing/: Dashboard_Combatibility_Testing.ino
Playground/ESP32_LED_test/: ESP32_LED_test.ino
Playground/ESP32_bluetooth_obtain_MAC_client/: ESP32_bluetooth_obtain_MAC_client.ino
Playground/Main_Control_Unit_Testing/: MCU_rev11_dfs.h  MCU_rev12_dfs.h  (+2 more)
Telemetry/: RaspberryShutdown.py  requirements.txt
Telemetry/AutoTimeDetector/: CMakeLists.txt  main.cpp  pbPlots.cpp
Telemetry/AutoTimeDetector/src/: CircleChecker.cpp  CircleChecker.hpp  CoordinateConverter.cpp  CoordinateConverter.hpp  Grapher.cpp  Grapher.hpp  MqttGpsCallback.cpp  MqttGpsCallback.hpp  Point.hpp  main.cpp  math.cpp  math.hpp  mqtt_constants.hpp  pbPlots.hpp  supportLib.cpp
Telemetry/LibraryToParser/: CMakeLists.txt  Field.cpp  Field.hpp  Message.cpp  Message.hpp  Signal.cpp  Signal.hpp  StringManip.cpp  StringManip.hpp  main.cpp
Telemetry/LibraryToParser/libDir/: BMS_detailed_temperatures.h
Telemetry/LibraryToParser/parserDir/: newParser.py
Telemetry/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
Telemetry/dashboard/src-tauri/icons/: icon.icns
Telemetry/dashboard/src-tauri/src/: main.rs
Telemetry/dashboard/src-tauri/tauri-plugin-mqtt/: Cargo.toml
Telemetry/dashboard/src-tauri/tauri-plugin-mqtt/src/: lib.rs
sketch_oct26a/: sketch_oct26a.ino
(+868 files in other folders)
