[package]
name = "telemetry-dashboard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = [".", "tauri-plugin-mqtt"]

[workspace.dependencies]
tauri = "1.5"
serde = "1.0"
serde_json = "1.0"
tokio = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri-plugin-mqtt = { path = "./tauri-plugin-mqtt" }
tauri = { version = "1.5", features = [ "window-set-fullscreen", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
