[package]
name = "tauri-plugin-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror = "1"
http = "1"
rand = "0.8"
futures-util = "0.3"
tokio = { workspace = true, features = ["net", "sync"] }
rumqttc = { version = "0.23", default-features = false, features = ["use-native-tls"] }